# cpp_module_train

./: .gitignore  CMakeLists.txt  README.md  func2.cxx
libprint/: CMakeLists.txt  libprint.cpp  libprint.h  print.cxx
src/: CMakeLists.txt  func.cxx  main.cpp
src/main_cxx/: mod.cxx
src/videos/: video.cpp  video.h
src/videos/videos_cxx/: mp4.cxx
